# crack-types

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: errors.rs
src/: errors.rs  errors_examples.rs  errors_improved.rs  lib.rs  metadata.rs  mocks.rs  reply_handle.rs
src/messaging/: messages.rs
