[package]
name = "crack-types"
version = "0.4.0"
edition = "2021"
authors = ["Cycle Five <cycle.five@proton.me>"]
rust-version = "1.85.0"
publish = true
license = "MIT"
description = "Common types for Crack Tunes."
keywords = ["music", "discord", "bot", "crack", "tunes", "types"]
categories = [
  "multimedia::audio",
  "multimedia::music",
  "multimedia::discord",
  "multimedia::bot",
]
homepage = "https://cracktun.es/"
repository = "https://github.com/cycle-five/crack-types"

[features]
default = ["crack-tracing"]
crack-gpt = []
crack-tracing = ["tracing", "tracing-subscriber"]

[dependencies]
anyhow = "1.0"
serde_json = "1.0"
typemap_rev = "0.3"
small-fixed-array = "0.4"
reqwest = { version = "0.12.15", default-features = false, features = [
  "blocking",
  "json",
  "multipart",
  "rustls-tls",
  "cookies",
  "charset",
  "http2",
  "macos-system-configuration",
] }
url = ">=2.5.4"
humantime = "2.1"
thiserror = "2.0"
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
], optional = true }
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }

[dependencies.rspotify]
version = "0.14"
default-features = false
features = ["client-reqwest", "reqwest-rustls-tls"]

[dependencies.rusty_ytdl]
version = "0.7.4"
default-features = false
features = ["live", "rustls-tls", "search", "blocking", "ffmpeg"]

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity.git"
branch = "next"
# version = "0.12.4"

[dependencies.poise]
git = "https://github.com/serenity-rs/poise.git"
branch = "serenity-next"

[dependencies.songbird]
# version = "0.5.0"
git = "https://github.com/serenity-rs/songbird.git"
branch = "serenity-next"
features = [
  "driver", "gateway", "serenity", "rustls", "receive"
]

[dependencies.sqlx]
version = "0.8.3"
default-features = false
features = ["runtime-tokio", "tls-rustls", "macros", "postgres", "chrono", "migrate", "json"]
